--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Слайдер</title>
+    <title>Easy slider</title>
     <link rel="stylesheet" href="css/reboot.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
